fixed alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,8 @@ body {
 .introLarge {
   font-family: "Poppins", "Oswald", sans-serif;
   color: white;
-  padding-left: 70px;
   text-align: center;
-  padding-top: 150px;
+  padding-top: 130px;
 }
 
 #companyname {
